crates/shuck-linter/src/rules/portability/snapshots/shuck_linter__rules__portability__tests__X026_X026.sh.snap
---
source: crates/shuck-linter/src/rules/portability/mod.rs
assertion_line: 158
---
X026 `$(< file)` is not portable in `sh` scripts
 --> <source>:4:7
  |
4 | first=$(< input.txt)
  |

X026 `$(< file)` is not portable in `sh` scripts
 --> <source>:5:9
  |
5 | second="$( < spaced.txt )"
  |

X026 `$(< file)` is not portable in `sh` scripts
 --> <source>:6:7
  |
6 | third=$(0< fd.txt)
  |
