crates/shuck-linter/src/rules/portability/snapshots/shuck_linter__rules__portability__tests__X033_X033.sh.snap
---
source: crates/shuck-linter/src/rules/portability/mod.rs
assertion_line: 32
---
X033 `elif` uses `[[ ... ]]`, which is not available in POSIX sh
 --> <source>:4:6
  |
4 | elif [[ "$OSTYPE" == foo ]]; then
  |
