crates/shuck-linter/src/rules/portability/snapshots/shuck_linter__rules__portability__tests__X034_X034.sh.snap
---
source: crates/shuck-linter/src/rules/portability/mod.rs
assertion_line: 32
---
X034 extended glob patterns in `[[` matches are not portable to POSIX sh
 --> <source>:2:16
  |
2 | if [[ $term == @(xterm|screen)* ]]; then :; fi
  |

X034 extended glob patterns in `[[` matches are not portable to POSIX sh
 --> <source>:5:16
  |
5 | if [[ $term != @(foo|bar) ]]; then :; fi
  |
