crates/shuck-linter/src/rules/portability/snapshots/shuck_linter__rules__portability__tests__X035_X035.sh.snap
---
source: crates/shuck-linter/src/rules/portability/mod.rs
---
X035 function definitions cannot take parameters in `sh` scripts
 --> <source>:2:2
  |
2 | f(x) { :; }
  |

X035 function definitions cannot take parameters in `sh` scripts
 --> <source>:3:11
  |
3 | function g(y) { :; }
  |

X035 function definitions cannot take parameters in `sh` scripts
 --> <source>:4:18
  |
4 | coproc pycoproc (python3 "$pywrapper")
  |
