crates/shuck-linter/src/rules/portability/snapshots/shuck_linter__rules__portability__tests__X037_X037.sh.snap
---
source: crates/shuck-linter/src/rules/portability/mod.rs
---
X037 grouped case patterns are not portable to POSIX sh
 --> <source>:3:3
  |
3 |   (a|b)*) : ;;
  |
